# internal/routers/user.router.go
@@ -3,13 +3,14 @@ package routers
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/jackc/pgx/v5/pgxpool"
+	"github.com/redis/go-redis/v9"
 
 	"github.com/malailiyati/backend/internal/handlers"
 	"github.com/malailiyati/backend/internal/middlewares"
 	"github.com/malailiyati/backend/internal/repositories"
 )
 
-func InitUserRouter(router *gin.Engine, db *pgxpool.Pool) {
+func InitUserRouter(router *gin.Engine, db *pgxpool.Pool, rdb *redis.Client) {
 	orderRepo := repositories.NewOrderRepository(db)
 	orderHandler := handlers.NewOrderHandler(orderRepo)
 
@@ -23,12 +24,12 @@ func InitUserRouter(router *gin.Engine, db *pgxpool.Pool) {
 
 	// User routes (hanya bisa diakses user yang login)
 	user := router.Group("/user")
-	user.Use(middlewares.AuthMiddleware("user"))
+	user.Use(middlewares.AuthMiddleware(rdb, "user"))
 	{
 		user.POST("/orders", orderHandler.CreateOrder)  // buat order tiket
 		user.GET("/history", historyHandler.GetHistory) // lihat riwayat order
 		user.GET("/profile", profileHandler.GetProfile)
 		user.PATCH("/profile", profileHandler.UpdateProfile)
-		user.PUT("/password", profileHandler.UpdatePassword)
+		user.PATCH("/password", profileHandler.UpdatePassword)
 	}
 }
